# etna

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  deep_state.py  make_bug.py  make_plot.py  mypy.ini  nn_poc.py  pyproject.toml  pytest.ini
.binder/: requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  how-to-question.md  how-to-question.yml  other_issue.yml  typos-and-documentation-fixes.md  typos-and-documentation-fixes.yml
.github/workflows/: cron-delete-untagged-images.yml  docker-stable.yml  docker-unstable.yml  docs-on-pr.yml  docs-unstable.yml  doctest.yaml  notebooks.yml  publish-docs.yml  publish.yml  test.yml
benchmarks/perfomance/: .gitignore  README.md  main.py  requirements.txt  view.ipynb
docker/: Makefile  README.md
docker/etna-cpu/: Dockerfile  requirements.txt
docker/etna-cuda-10.2/: Dockerfile
docker/etna-cuda-11.1/: Dockerfile  requirements.txt
docker/etna-cuda-11.6/: Dockerfile
docker/etna-cuda-11.6.2/: Dockerfile  requirements.txt
docker/etna_cpu_x8664_py3.8/: Dockerfile  requirements.txt
docs/: Makefile
docs/source/: analysis.rst  api.rst  api_reference.rst  arm.rst  auto.rst  commands.rst  conf.py  datasets.rst  glossary.rst  index.rst  installation.rst  metrics.rst  model_selection.rst  models.rst  pipeline.rst  reconciliation.rst  release.rst  resources.rst  settings.rst  transforms.rst  tutorials.rst  user_guide.rst
etna/: __init__.py  settings.py
etna/analysis/: __init__.py  eda_utils.py  plotters.py  utils.py
etna/auto/: __init__.py  auto.py  utils.py
etna/clustering/: __init__.py  base.py
etna/commands/: __init__.py  __main__.py  backtest.py  backtest_command.py  forecast.py  forecast_command.py  resolvers.py  utils.py
etna/core/: __init__.py  mixins.py  saving.py  utils.py
etna/datasets/: __init__.py  dataset.py  datasets.py  datasets_generation.py  hierarchical_structure.py  tsdataset.py  utils.py
etna/distributions/: __init__.py  distributions.py
etna/ensembles/: __init__.py  base.py  direct_ensemble.py  mixins.py  stacking_ensemble.py  voting_ensemble.py
etna/loggers/: __init__.py  base.py  console_logger.py  file_logger.py  wandb_logger.py
etna/metrics/: __init__.py  base.py  functional_metrics.py  intervals_metrics.py  metrics.py  utils.py
etna/model_selection/: __init__.py  backtest.py
etna/models/: __init__.py  autoarima.py  base.py  catboost.py  deadline_ma.py  decorators.py  holt_winters.py  linear.py  mixins.py  moving_average.py  naive.py  prophet.py  sarimax.py  seasonal_ma.py  sklearn.py  statsforecast.py  tbats.py  utils.py
etna/pipeline/: __init__.py  assemble_pipelines.py  assembling_pipelines.py  assmbling_pipelines.py  autoregressive_pipeline.py  backtest_utils.py  base.py  hierarchical_pipeline.py  mixins.py  nn_pipeline.py  pipeline.py  pipelines_fabric.py
etna/reconciliation/: __init__.py  base.py  bottom_up.py  top_down.py
etna/transforms/: ChangePoints.py  __init__.py  add_constant.py  base.py  binseg.py  change_points_trend.py  datetime_flags.py  detrend.py  differencing.py  feature_importance.py  feature_selection.py  filter.py  fourier.py  gale_shapley.py  holiday.py  imputation.py  lags.py  log.py  outliers.py  power.py  pytorch_forecasting.py  resample.py  scalers.py  segment_encoder.py  sklearn.py  special_day_finder.py  special_days.py  statistics.py  stl.py  trend.py  utils.py
examples/: 01-get_started.ipynb  02-backtest.ipynb  03-EDA.ipynb  04-exogenous_data.ipynb  05-custom_transform_and_model.ipynb  06-NN_examples.ipynb  07-ensembles.ipynb  08-outliers.ipynb  09-forecasting_strategies.ipynb  101-get_started.ipynb  102-backtest.ipynb  11-clustering.ipynb  12-automl.ipynb  13-inference.ipynb  14-hierarchical_pipeline.ipynb  15-classification.ipynb  16-feature_selection.ipynb  17-mechaincs_of_forecasting.ipynb  17-mechanics_of_forecasting.ipynb  201-exogenous_data.ipynb  202-NN_examples.ipynb  203-ensembles.ipynb  204-outliers.ipynb  205-automl.ipynb  206-clustering.ipynb  207-feature_selection.ipynb  208-forecasting_strategies.ipynb  209-mechanics_of_forecasting.ipynb  301-custom_transform_and_model.ipynb  302-inference.ipynb  303-hierarchical_pipeline.ipynb  305-classification.ipynb  EDA.ipynb  NN_examples.ipynb  Outliers.ipynb  README.md  Simple_Catboost_Baseline_Solution_by_Sixty_lines_with_ETNA_library.ipynb  auto.py  automl.ipynb  backtest.ipynb  (+18 more)
examples/configs/: .etna
examples/data/: README.md  example_dataset.csv  monthly-australian-wine-sales.csv  nordic_merch_sales.csv  nordics_weather.csv
examples/optuna/: .gitignore  README.md  optuna-example.py  optuna_example.py
memory_profiling/new_transform/: new_logic_copy.py  new_logic_inplace.py  new_transform.py  old_logic.py  run.sh
scripts/: cache_cleaner.py  check_imported_dependencies.py  create_versions_list.py  notebook_codespell.py  notebook_runner.py  readme_updater.py  release.py  release.sh  remove_old_images.py  shell.py  test_settings.sh
stacking_investigation/: README.md  main.py  run.py
stacking_investigation/configs/: catboost.json  holt_winters.json  naive_1.json  naive_7.json  prophet.json  sarima.json  stacking_1_linear.json  stacking_1_ridge.json  stacking_1_ridge_positive.json  stacking_3_catboost.json  stacking_3_lasso.json  stacking_3_lasso_positive.json  stacking_3_linear.json  stacking_3_ridge.json  stacking_3_ridge_positive.json  stacking_5_linear.json  stacking_5_ridge.json  stacking_5_ridge_positive.json  voting_1_auto.json  voting_1_none.json  voting_3_auto.json  voting_3_none.json
stacking_investigation/results/: catboost.json  holt_winters.json  naive_1.json  naive_7.json  prophet.json  sarima.json  stacking_1_linear.json  stacking_1_ridge.json  stacking_1_ridge_positive.json  stacking_3_catboost.json  stacking_3_lasso.json  stacking_3_lasso_positive.json  stacking_3_linear.json  stacking_3_ridge.json  stacking_3_ridge_positive.json  stacking_5_linear.json  (+5 more)
tests/: conftest.py  utils.py
(+459 files in other folders)
