[tool.poetry]
name = "etna"
version = "1.6.2"
repository = "https://github.com/tinkoff-ai/etna"
readme = "README.md"
description = "ETNA is the first python open source framework of Tinkoff.ru AI Center. It is designed to make working with time series simple, productive, and fun."
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

packages = [
    { include = "etna", from = "." },
]

authors = [
    "Andrey Alekseev <an.alekseev@tinkoff.ru>",
    "Julia Shenshina <y.a.shenshina@tinkoff.ru>",
    "Martin Gabdushev <m.gabdushev@tinkoff.ru>",
    "Albina Munirova <a.i.munirova@tinkoff.ru>",
    "Artem Levashov <levashov.as@phystech.edu>",
    "Alexey Podkidyshev <podkidyshev.as@phystech.edu>",
    "Nikita Barinov <n.barinov@tinkoff.ru>",
    "Dmitry Bunin <d.a.bunin@tinkoff.ru>",
    "Alexander Chikov <a.p.chikov@tinkoff.ru>"
]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10.0"
scikit-learn = ">=0.24, <2"
pandas = "^1"
catboost = ">=0.21"
ruptures = "1.1.5"
numba = "^0.53.1"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
dill = "^0.3.4"
toml = "^0.10.2"
loguru = "^0.5.3"
saxpy = "^1.0.1-dev167"
hydra-slayer = "^0.2.0"
typer = "^0.4.0"
omegaconf = "^2.1.1"
holidays = "^0.11.3"
boto3 = "^1.5"

prophet = {version = "^1.0", optional = true}

torch = {version = "1.8.*", optional = true}
pytorch-forecasting = {version = "^0.9.0", optional = true}

wandb = {version = "^0.12.2", optional = true}

[tool.poetry.extras]
# optional deps
prophet = ["prophet"]
torch = ["torch", "pytorch-forecasting"]
wandb = ["wandb"]

all = [
    "prophet",
    "torch", "pytorch-forecasting",
    "wandb",
]

[tool.poetry.dev-dependencies]
sphinx-mathjax-offline = "^0.0.1"
nbsphinx = "^0.8.2"
Sphinx = "^4.1"
numpydoc = "^1.1.0"
sphinx-rtd-theme = "^0.5.1"
myst-parser = "^0.15.0"
GitPython = "^3.1.20"

pytest = "^6.2"
coverage = "^5.4"
pytest-cov = "^2.11.1"

black = "21.9b0"
isort = "^5.8.0"
flake8 = "^3.9.2"
pep8-naming = "^0.12.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.910"
types-PyYAML = "^6.0.0"
codespell = "^2.0.0"

click = "^8.0.1"
semver = "^2.13.0"
ipywidgets = "^7.6.5"

jupyter = "*"
nbconvert = "*"

[tool.poetry.scripts]
etna = "etna.commands.__main__:app"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | etna/libs

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
